fixing overflow for (old?, non-mac?)

--- a/resources/linear/docco.css
+++ b/resources/linear/docco.css
@@ -123,7 +123,7 @@ pre, tt, code {
     -moz-box-shadow:    inset 0 0 10px rgba(0,0,0,0.1);
     -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
     box-shadow:         inset 0 0 10px rgba(0,0,0,0.1);
-    overflow-x: scroll;
+    overflow-x: auto;
   }
     .page pre code {
       border: 0;
